Dark Mode Fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* @import url('https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css'); */
+@import url('https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css');
 
 /* body {
   font-family: 'Roboto', sans-serif;
@@ -41,7 +41,7 @@ body {
   /* ===== Colors ===== */
   --body-color: #E4E9F7;
   --sidebar-color: #FFF;
-  --primary-color: #695CFE;
+  --primary-color: #5CA5FE;
   --primary-color-light: #F6F5FF;
   --toggle-color: #DDD;
   --text-color: #707070;
